--- a/styles2.css
+++ b/styles2.css
@@ -67,6 +67,11 @@ body {
     align-items: center;
     gap: 1rem;
 }
+.section-1 article{
+        display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .section-1 img {
     width: 100%;
